--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     color: black;
   }
   body {
-    background-color: rgba(201, 76, 76, 0.3);
+    background-color: blueviolet;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
